[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/main_container/left_container/about/About.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main_container.tres" type="Theme" id=2]
[ext_resource path="res://scenes/main_container/left_container/help.gd" type="Script" id=3]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main_container/left_container/tree_menu.gd" type="Script" id=5]
[ext_resource path="res://scenes/utility/alert/Alert.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/main_container/left_container/collection.gd" type="Script" id=7]
[ext_resource path="res://scenes/main_container/left_container/database.gd" type="Script" id=8]
[ext_resource path="res://scenes/main_container/left_container/tree.gd" type="Script" id=9]
[ext_resource path="res://scenes/main_container/left_container/edit.gd" type="Script" id=10]
[ext_resource path="res://scenes/main_container/left_container/file.gd" type="Script" id=11]
[ext_resource path="res://scenes/main_container/left_container/connections_list/ConnectionsList.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/main_container/left_container/left_container.gd" type="Script" id=13]
[ext_resource path="res://scenes/main_container/left_container/connection.gd" type="Script" id=14]

[node name="LeftContainer" type="VBoxContainer"]
anchor_bottom = 1.0
margin_top = 5.0
margin_right = 274.0
rect_min_size = Vector2( 274, 0 )
theme = ExtResource( 2 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_right = 274.0
margin_bottom = 22.0

[node name="File" type="MenuButton" parent="Menu"]
margin_right = 35.0
margin_bottom = 22.0
text = "File"
flat = false
items = [ "Open connections list", null, 0, false, false, 0, 0, null, "", false, "Exit", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 11 )

[node name="ConnectionsList" parent="Menu/File" instance=ExtResource( 12 )]

[node name="Edit" type="MenuButton" parent="Menu"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 22.0
text = "Edit"
flat = false
items = [ "Preferences", null, 0, false, false, 0, 0, null, "", false, "Theme", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 10 )

[node name="Help" type="MenuButton" parent="Menu"]
margin_left = 79.0
margin_right = 121.0
margin_bottom = 22.0
text = "Help"
flat = false
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]
script = ExtResource( 3 )

[node name="About" parent="Menu/Help" instance=ExtResource( 1 )]

[node name="Tree" type="Tree" parent="."]
margin_top = 26.0
margin_right = 274.0
margin_bottom = 595.0
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
script = ExtResource( 9 )

[node name="Connection" type="Node" parent="Tree"]
script = ExtResource( 14 )

[node name="Menu" type="PopupMenu" parent="Tree/Connection"]
margin_top = 31.0
margin_right = 122.0
margin_bottom = 191.0
theme = ExtResource( 2 )
items = [ "Open shell", null, 0, false, false, 0, 0, null, "", false, "Open settings", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Create database", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Refresh", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Disconnect", null, 0, false, false, 4, 0, null, "", false ]
script = ExtResource( 5 )

[node name="PythonWatcher" parent="Tree/Connection" instance=ExtResource( 4 )]

[node name="Alert" parent="Tree/Connection" instance=ExtResource( 6 )]
margin_bottom = 68.0

[node name="Database" type="Node" parent="Tree"]
script = ExtResource( 8 )

[node name="Menu" type="PopupMenu" parent="Tree/Database"]
margin_top = 31.0
margin_right = 128.0
margin_bottom = 194.0
theme = ExtResource( 2 )
items = [ "Open shell", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Create collection", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Refresh", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Drop", null, 0, false, false, 4, 0, null, "", false ]
script = ExtResource( 5 )

[node name="PythonWatcher" parent="Tree/Database" instance=ExtResource( 4 )]

[node name="Alert" parent="Tree/Database" instance=ExtResource( 6 )]

[node name="Collection" type="Node" parent="Tree"]
script = ExtResource( 7 )

[node name="Menu" type="PopupMenu" parent="Tree/Collection"]
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )
items = [ "Open shell", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Import data", null, 0, false, false, 1, 0, null, "", false, "Export data", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Drop", null, 0, false, false, 3, 0, null, "", false ]
script = ExtResource( 5 )

[connection signal="exit_pressed" from="Menu/File" to="Menu/File" method="_on_File_exit_pressed"]
[connection signal="open_connections_list_pressed" from="Menu/File" to="Menu/File" method="_on_File_open_connections_list_pressed"]
[connection signal="item_selected" from="Menu/File/ConnectionsList" to="Tree" method="_on_ConnectionsList_item_selected"]
[connection signal="about_pressed" from="Menu/Help" to="Menu/Help" method="_on_Help_about_pressed"]
[connection signal="collection_dropped_on_database" from="Tree" to="Tree" method="_on_Tree_collection_dropped_on_database"]
[connection signal="item_activated" from="Tree" to="Tree" method="_on_Tree_item_activated"]
[connection signal="item_rmb_selected" from="Tree" to="Tree" method="_on_Tree_item_rmb_selected"]
[connection signal="new_databases" from="Tree/Connection" to="Tree/Database" method="_on_Connection_new_databases"]
[connection signal="shell_requested" from="Tree/Connection" to="." method="_on_Connection_shell_requested"]
[connection signal="id_pressed" from="Tree/Connection/Menu" to="Tree" method="_on_ConnectionMenu_id_pressed"]
[connection signal="output" from="Tree/Connection/PythonWatcher" to="Tree/Connection" method="_on_PythonWatcher_output"]
[connection signal="new_collections" from="Tree/Database" to="Tree/Collection" method="_on_Database_new_collections"]
[connection signal="shell_requested" from="Tree/Database" to="." method="_on_Database_shell_requested"]
[connection signal="id_pressed" from="Tree/Database/Menu" to="Tree" method="_on_DatabaseMenu_id_pressed"]
[connection signal="output" from="Tree/Database/PythonWatcher" to="Tree/Database" method="_on_PythonWatcher_output"]
[connection signal="shell_requested" from="Tree/Collection" to="." method="_on_Collection_shell_requested"]
[connection signal="id_pressed" from="Tree/Collection/Menu" to="Tree" method="_on_CollectionMenu_id_pressed"]
